examples/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: hello-world-ingress
spec:
  rules:
  - host: hello-world.manila.internal
    http:
      paths:
      - backend:
          service:
            name: hello-world
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
